@@ -15,6 +15,8 @@ ViSP 3.3.1 (under development)
     . [#718] vpImage<unsigned char>::getValue() is not working on big endian arch
     . [#726] Segfault in vpServo when the number of visual features is very
       large (> 50.000)
+    . [#728] vpProjectionDisplay doesn't display frame with RGB colors respectively
+      for X, Y and Z axis
 ----------------------------------------------
 ViSP 3.3.0 (released February 14, 2020)
   - Contributors:
